--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1> This is the about page </h1>
-<%= link_to  "Home",root_path%>
+ <%= link_to "Blog", articles_path %> | <%= link_to  "Home",root_path%>
