--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>This is my blog</h1>
- <%= link_to "Blog", articles_path %> | <%= link_to "About", about_path%>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign Up Now", "#",class:"btn btn-primary btn-lg" %>
+</div>
