--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'layouts/messages' %>
+  
   <%= render 'layouts/navigation' %>
+
   <div class="container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 </body>
 </html>
