--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,8 +6,18 @@
 
 </p>
 
+
 <p>
-
+  <ul class="listing">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) if @article.user %></li>
+          <li><%= link_to @article.user.username, user_path(@article.user) if @article.user %></li>
+          <li>
+            <small><%= pluralize(@article.user.articles.count, "article") if @article.user &&  @article.user.articles %></small>
+          </li>
+        </div>
+      </div>
+    </ul>
   Description: <%= @article.description %>
-
 </p>
