add-pagination finished

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,13 @@
 
   </div>
 </div>
-<div class="row">    
+<div class="row">   
 <h4 align="center"> <%= @user.username %>'s articles </h4>
-  <%=  render 'articles/articles', obj: @user.articles %>
+  <div align="center">
+    <%= will_paginate @user_articles %>
+  </div>
+  <%=  render 'articles/articles', obj: @user_articles %>
+  <div align="center">
+    <%= will_paginate @user_articles %>
+  </div>
 </div>
