--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,7 @@
-<%= render 'articles', obj: @articles %>
+<div align="center">
+  <%= will_paginate @articles, renderer: BootstrapPagination::Rails %>
+</div>
+  <%= render 'articles', obj: @articles %>
+<div align="center">
+  <%= will_paginate @articles, renderer: BootstrapPagination::Rails %>
+</div>  
