--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -18,7 +18,7 @@
       <td> <%= a.description %> </td>
       <td> <%=  time_ago_in_words(a.created_at)  %> ago </td>
       <td> <%=  time_ago_in_words(a.updated_at)  %> ago </td>
-      <% if logged_in && current_user == article.user %>
+      <% if logged_in? && current_user == a.user %>
       <td> <%= link_to "Edit", edit_article_path(a) %> </td> 
       <td> <%= link_to "Delete", article_path(a), method: :delete, data:{confirm: "Are you sure?"} %> </td>  
       <% end %> 
