--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,3 +1,13 @@
+<% if @category.errors.any? %>
+<h2>The following errors prevented the category from being created</h2>
+<ul>
+  <% @category.errors.full_messages.each do |msg| %>
+    <li> <%= msg %> </li> 
+  <% end %>
+</ul>
+<% end %>
+
+
 <div class="form-horizontal">
 <%= form_for @category do |category| %>
   <p> 
